<resources>
    <string name="app_name">trainticketapp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="your_qr_code">Your QR Code</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="date_start">Date Start</string>
    <string name="time_start">Time Start</string>
    <string name="description">Description</string>
    <string name="seat">Seat</string>
    <string name="train_id">Train ID</string>
    <string name="name">Name</string>
    <string name="user_profile">User Profile</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="resend_password">resend password</string>
    <string name="train_ticket_app">Train Ticket App</string>
    <string name="book">Book</string>
    <string name="amount">Amount:</string>
    <string name="edit">Edit</string>
    <string name="member">Member</string>
    <string name="log_out">Log Out</string>
    <string name="change_ui_mode">Change UI Mode</string>
    <string name="reward">Reward</string>
    <string name="account_information">Account information</string>
    <string name="search">Search</string>
    <string name="ticket">My Tickets</string>
    <string name="question">Where are you going?</string>
    <string name="start_point">Start point</string>
    <string name="train_not_found">train not found</string>
    <string name="no_trains_found_matching_your_search">No trains found matching your search</string>
    <string name="duration">Duration</string>
    <string name="download">Download</string>
    <string name="support">Support</string>
</resources>