<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailTicketActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:text="@string/your_qr_code"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <ImageView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/qrCodeImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="50dp"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="322dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/qrCodeImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvDestination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destination" />

        <TextView
            android:id="@+id/tvOrigin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/origin" />

        <TextView
            android:id="@+id/tvDateStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_start" />

        <TextView
            android:id="@+id/tvTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_start" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <TextView
            android:id="@+id/tvSeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seat" />

        <TextView
            android:id="@+id/tvTrainID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/train_id" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>