<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="250dp"

        android:background="@drawable/corner_border_round"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </View>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_ve_tau_re"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="93dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/baseline_arrow_forward_ios_24"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:text="@string/question"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toTopOf="@id/view2"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="90dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="281dp"
        android:background="@drawable/rectange_round"
        android:elevation="8dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/ivWhereTo"
            android:layout_width="38dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="46dp"
            android:src="@drawable/baseline_location_on_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivStartPoint" />

        <TextView
            android:id="@+id/tvStartPointLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="52dp"
            android:text="@string/start_point"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStartPoint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            app:layout_constraintEnd_toStartOf="@id/btnReverse"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStartPointLabel" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/white_grey"
            android:layout_marginTop="6dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStartPoint"
            app:layout_constraintStart_toStartOf="parent"/>
        <TextView
            android:id="@+id/tvWhereToLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:text="Where to?"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStartPoint" />


        <TextView
            android:id="@+id/tvWhereTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWhereToLabel" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/white_grey"
            android:layout_marginTop="8dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWhereTo"
            app:layout_constraintStart_toStartOf="parent"/>
        <ImageView
            android:id="@+id/ivStartPoint"
            android:layout_width="38dp"
            android:layout_height="35dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="54dp"
            android:src="@drawable/baseline_radio_button_checked_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivDashed"
            android:layout_width="33dp"
            android:layout_height="44dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/dash_line"
            app:layout_constraintBottom_toTopOf="@id/ivWhereTo"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="97dp" />

        <ImageButton
            app:cornerRadius="16dp"
            android:id="@+id/btnReverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/swap_vert_24px"
            />

       </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rectange_round"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/search" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Hot Offer"
        android:id="@+id/tvOffer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSearch"
        android:textColor="@color/blue_dark"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recyclerViewVoucher"
        app:layout_constraintTop_toBottomOf="@id/tvOffer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />


</androidx.constraintlayout.widget.ConstraintLayout>